examples/negative/effects_phase2/op_call_unknown_op.err.expected
error: unknown op `unknown` on effect `Io`
  --> examples/negative/effects_phase2/op_call_unknown_op.kai:11:13
     |
  11 |   Io.unknown("hi")
     |             ^
  = note: `Io.unknown` is not declared in `effect Io { ... }`
  = help: declare `unknown(...)` inside the effect, or call an existing op
